# vendored

./: .gitignore  README.md  modules.txt
c-deps/: .gitignore  import.sh  rocksdb-gettimeofday.patch  rocksdb-no-shared-libs.patch
c-deps/rocksdb/build_tools/: build_detect_platform
cloud.google.com/go/: BUILD.bazel
cloud.google.com/go/iam/: BUILD.bazel
cloud.google.com/go/internal/: BUILD.bazel
cloud.google.com/go/storage/: BUILD.bazel  invoke.go  reader.go  writer.go
github.com/Azure/go-ansiterm/: BUILD.bazel
github.com/BurntSushi/toml/: BUILD.bazel
github.com/DataDog/zstd/: BUILD.bazel
github.com/Masterminds/goutils/: BUILD.bazel
github.com/Masterminds/semver/: BUILD.bazel
github.com/Masterminds/sprig/: BUILD.bazel
github.com/MichaelTJones/walk/: BUILD.bazel
github.com/Microsoft/go-winio/: BUILD.bazel
github.com/Microsoft/go-winio/pkg/guid/: BUILD.bazel
github.com/Nvveen/Gotty/: BUILD.bazel
github.com/PuerkitoBio/goquery/: BUILD.bazel
github.com/Shopify/sarama/: BUILD.bazel
github.com/StackExchange/wmi/: BUILD.bazel
github.com/VividCortex/ewma/: BUILD.bazel
github.com/abourget/teamcity/: BUILD.bazel  client.go  client_test.go  mock_test.go  problems_test.go
github.com/abourget/teamcity/tester/: teamcity.go
github.com/agnivade/levenshtein/: BUILD.bazel
github.com/ajwerner/tdigest/: README.md  concurrent.go  config.go  (+4 more)
github.com/alexbrainman/sspi/: BUILD.bazel
github.com/alexbrainman/sspi/negotiate/: BUILD.bazel
github.com/andy-kimball/arenaskl/: BUILD.bazel
github.com/andy-kimball/arenaskl/internal/fastrand/: BUILD.bazel
github.com/andybalholm/cascadia/: BUILD.bazel
github.com/axiomhq/hyperloglog/: BUILD.bazel
github.com/benesch/cgosymbolizer/: BUILD.bazel
github.com/cenkalti/backoff/: BUILD.bazel
github.com/cockroachdb/circuitbreaker/: BUILD.bazel  circuitbreaker.go
github.com/cockroachdb/cmux/: BUILD.bazel  cmux.go  cmux_test.go
github.com/cockroachdb/crlfmt/: BUILD.bazel
github.com/cockroachdb/crlfmt/internal/parser/: BUILD.bazel
github.com/cockroachdb/crlfmt/internal/render/: BUILD.bazel
github.com/cockroachdb/datadriven/: BUILD.bazel
github.com/cockroachdb/errors/: BUILD.bazel  go.mod  go.sum
github.com/cockroachdb/errors/assert/: BUILD.bazel
github.com/cockroachdb/errors/barriers/: BUILD.bazel
github.com/cockroachdb/errors/contexttags/: BUILD.bazel
github.com/cockroachdb/errors/domains/: BUILD.bazel
github.com/cockroachdb/errors/errbase/: BUILD.bazel
github.com/cockroachdb/errors/errorspb/: BUILD.bazel
github.com/cockroachdb/errors/errutil/: BUILD.bazel  message.go
github.com/cockroachdb/errors/hintdetail/: BUILD.bazel
github.com/cockroachdb/errors/issuelink/: BUILD.bazel
github.com/cockroachdb/errors/markers/: BUILD.bazel
github.com/cockroachdb/errors/oserror/: BUILD.bazel
github.com/cockroachdb/errors/report/: BUILD.bazel
github.com/cockroachdb/errors/safedetails/: BUILD.bazel
github.com/cockroachdb/errors/secondary/: BUILD.bazel
github.com/cockroachdb/errors/stdstrings/: BUILD.bazel
github.com/cockroachdb/errors/telemetrykeys/: BUILD.bazel
github.com/cockroachdb/errors/testutils/: BUILD.bazel
github.com/cockroachdb/errors/withstack/: BUILD.bazel
github.com/cockroachdb/go-test-teamcity/: BUILD.bazel
github.com/cockroachdb/logtags/: BUILD.bazel
github.com/cockroachdb/pebble/: BUILD.bazel  compaction.go  compaction_iter.go  compaction_picker.go  db.go  ingest.go  iterator.go  new.txt  old.txt  open.go  output.txt  read_state.go  table_cache.go
github.com/cockroachdb/pebble/bloom/: BUILD.bazel
github.com/cockroachdb/pebble/internal/arenaskl/: BUILD.bazel
github.com/cockroachdb/pebble/internal/base/: BUILD.bazel
github.com/cockroachdb/pebble/internal/batchskl/: BUILD.bazel
github.com/cockroachdb/pebble/internal/bytealloc/: BUILD.bazel
github.com/cockroachdb/pebble/internal/cache/: BUILD.bazel  entry_normal.go
github.com/cockroachdb/pebble/internal/crc/: BUILD.bazel
github.com/cockroachdb/pebble/internal/fastrand/: BUILD.bazel
github.com/cockroachdb/pebble/internal/humanize/: BUILD.bazel
github.com/cockroachdb/pebble/internal/intern/: BUILD.bazel
github.com/cockroachdb/pebble/internal/invariants/: BUILD.bazel  race_off.go
github.com/cockroachdb/pebble/internal/keyspan/: fragmenter.go
github.com/cockroachdb/pebble/internal/manifest/: BUILD.bazel  btree.go  version.go  version_edit.go
github.com/cockroachdb/pebble/internal/manual/: BUILD.bazel
github.com/cockroachdb/pebble/internal/private/: BUILD.bazel
github.com/cockroachdb/pebble/internal/randvar/: BUILD.bazel
github.com/cockroachdb/pebble/internal/rangedel/: BUILD.bazel
github.com/cockroachdb/pebble/internal/rate/: BUILD.bazel
github.com/cockroachdb/pebble/internal/rawalloc/: BUILD.bazel
github.com/cockroachdb/pebble/internal/record/: BUILD.bazel
github.com/cockroachdb/pebble/sstable/: BUILD.bazel
github.com/cockroachdb/pebble/tool/: BUILD.bazel
github.com/cockroachdb/pebble/vfs/: BUILD.bazel
github.com/cockroachdb/redact/: BUILD.bazel
github.com/cockroachdb/redact/internal/: BUILD.bazel
github.com/cockroachdb/redact/internal/fmtsort/: BUILD.bazel
github.com/cockroachdb/returncheck/: BUILD.bazel  returncheck_test.go
github.com/cockroachdb/returncheck/testdata/: test.go
github.com/prometheus/: BUILD.bazel
go.opencensus.io/: BUILD.bazel
go.opencensus.io/exemplar/: BUILD.bazel
go.opencensus.io/internal/: BUILD.bazel
go.opencensus.io/internal/tagencoding/: BUILD.bazel
go.opencensus.io/internal/testpb/: BUILD.bazel
go.opencensus.io/resource/: BUILD.bazel
go.opencensus.io/stats/: BUILD.bazel
go.opencensus.io/stats/internal/: BUILD.bazel
go.opencensus.io/stats/view/: BUILD.bazel
go.opencensus.io/tag/: BUILD.bazel
go.opencensus.io/trace/: BUILD.bazel
go.opencensus.io/trace/internal/: BUILD.bazel
go.opencensus.io/trace/propagation/: BUILD.bazel
go.opencensus.io/trace/tracestate/: BUILD.bazel
google.golang.org/appengine/: BUILD.bazel
google.golang.org/grpc/: BUILD.bazel
gopkg.in/yaml.v2/: BUILD.bazel
gopkg.in/yaml.v3/: BUILD.bazel
(+1273 files in other folders)
