load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "stats",
    srcs = [
        "doc.go",
        "measure.go",
        "measure_float64.go",
        "measure_int64.go",
        "record.go",
        "units.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/go.opencensus.io/stats",
    importpath = "go.opencensus.io/stats",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/go.opencensus.io/exemplar",
        "//vendor/go.opencensus.io/stats/internal",
        "//vendor/go.opencensus.io/tag",
    ],
)
