load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "trace",
    srcs = [
        "basetypes.go",
        "config.go",
        "doc.go",
        "exemplar.go",
        "export.go",
        "sampling.go",
        "spanbucket.go",
        "spanstore.go",
        "status_codes.go",
        "trace.go",
        "trace_go11.go",
        "trace_nongo11.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/go.opencensus.io/trace",
    importpath = "go.opencensus.io/trace",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/go.opencensus.io/exemplar",
        "//vendor/go.opencensus.io/internal",
        "//vendor/go.opencensus.io/trace/internal",
        "//vendor/go.opencensus.io/trace/tracestate",
    ],
)
