load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "iam",
    srcs = ["iam.go"],
    importmap = "github.com/cockroachdb/cockroach/vendor/cloud.google.com/go/iam",
    importpath = "cloud.google.com/go/iam",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/googleapis/gax-go",
        "//vendor/google.golang.org/genproto/googleapis/iam/v1:iam",
        "//vendor/google.golang.org/grpc",
        "//vendor/google.golang.org/grpc/codes",
    ],
)
