load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "zstd",
    srcs = [
        "bitstream.h",
        "compiler.h",
        "cover.c",
        "cover.h",
        "cpu.h",
        "debug.c",
        "debug.h",
        "divsufsort.c",
        "divsufsort.h",
        "entropy_common.c",
        "error_private.c",
        "error_private.h",
        "errors.go",
        "fastcover.c",
        "fse.h",
        "fse_compress.c",
        "fse_decompress.c",
        "hist.c",
        "hist.h",
        "huf.h",
        "huf_compress.c",
        "huf_decompress.c",
        "mem.h",
        "pool.c",
        "pool.h",
        "threading.c",
        "threading.h",
        "xxhash.c",
        "xxhash.h",
        "zbuff.h",
        "zbuff_common.c",
        "zbuff_compress.c",
        "zbuff_decompress.c",
        "zdict.c",
        "zdict.h",
        "zstd.go",
        "zstd.h",
        "zstd_common.c",
        "zstd_compress.c",
        "zstd_compress_internal.h",
        "zstd_compress_literals.c",
        "zstd_compress_literals.h",
        "zstd_compress_sequences.c",
        "zstd_compress_sequences.h",
        "zstd_cwksp.h",
        "zstd_ddict.c",
        "zstd_ddict.h",
        "zstd_decompress.c",
        "zstd_decompress_block.c",
        "zstd_decompress_block.h",
        "zstd_decompress_internal.h",
        "zstd_double_fast.c",
        "zstd_double_fast.h",
        "zstd_errors.h",
        "zstd_fast.c",
        "zstd_fast.h",
        "zstd_internal.h",
        "zstd_lazy.c",
        "zstd_lazy.h",
        "zstd_ldm.c",
        "zstd_ldm.h",
        "zstd_legacy.h",
        "zstd_opt.c",
        "zstd_opt.h",
        "zstd_stream.go",
        "zstd_v01.c",
        "zstd_v01.h",
        "zstd_v02.c",
        "zstd_v02.h",
        "zstd_v03.c",
        "zstd_v03.h",
        "zstd_v04.c",
        "zstd_v04.h",
        "zstd_v05.c",
        "zstd_v05.h",
        "zstd_v06.c",
        "zstd_v06.h",
        "zstd_v07.c",
        "zstd_v07.h",
        "zstdmt_compress.c",
        "zstdmt_compress.h",
    ],
    cgo = True,
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/DataDog/zstd",
    importpath = "github.com/DataDog/zstd",
    visibility = ["//visibility:public"],
)
