load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "goutils",
    srcs = [
        "cryptorandomstringutils.go",
        "randomstringutils.go",
        "stringutils.go",
        "wordutils.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/Masterminds/goutils",
    importpath = "github.com/Masterminds/goutils",
    visibility = ["//visibility:public"],
)
