load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go-winio",
    srcs = [
        "backup.go",
        "ea.go",
        "file.go",
        "fileinfo.go",
        "hvsock.go",
        "pipe.go",
        "privilege.go",
        "reparse.go",
        "sd.go",
        "syscall.go",
        "zsyscall_windows.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/Microsoft/go-winio",
    importpath = "github.com/Microsoft/go-winio",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/Microsoft/go-winio/pkg/guid",
    ] + select({
        "@io_bazel_rules_go//go/platform:windows": [
            "//vendor/golang.org/x/sys/windows",
        ],
        "//conditions:default": [],
    }),
)
