load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "Gotty",
    srcs = [
        "attributes.go",
        "gotty.go",
        "parser.go",
        "types.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/Nvveen/Gotty",
    importpath = "github.com/Nvveen/Gotty",
    visibility = ["//visibility:public"],
)
