load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "levenshtein",
    srcs = ["levenshtein.go"],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/agnivade/levenshtein",
    importpath = "github.com/agnivade/levenshtein",
    visibility = ["//visibility:public"],
)
