load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sspi",
    srcs = [
        "buffer.go",
        "mksyscall.go",
        "sspi.go",
        "syscall.go",
        "zsyscall_windows.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/alexbrainman/sspi",
    importpath = "github.com/alexbrainman/sspi",
    visibility = ["//visibility:public"],
)
