load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "backoff",
    srcs = [
        "backoff.go",
        "context.go",
        "exponential.go",
        "retry.go",
        "ticker.go",
        "tries.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cenkalti/backoff",
    importpath = "github.com/cenkalti/backoff",
    visibility = ["//visibility:public"],
)
