load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "breakerevent_string.go",
        "circuitbreaker.go",
        "client.go",
        "panel.go",
        "window.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/circuitbreaker",
    importpath = "github.com/cockroachdb/circuitbreaker",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cenkalti/backoff:go_default_library",
        "//vendor/github.com/facebookgo/clock:go_default_library",
    ],
)
