load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmux",
    srcs = [
        "buffer.go",
        "cmux.go",
        "doc.go",
        "matchers.go",
        "patricia.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/cmux",
    importpath = "github.com/cockroachdb/cmux",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/golang.org/x/net/http2",
        "//vendor/golang.org/x/net/http2/hpack",
    ],
)
