load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "diff.go",
        "main.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/crlfmt",
    importpath = "github.com/cockroachdb/crlfmt",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/cockroachdb/crlfmt/internal/parser:go_default_library",
        "//vendor/github.com/cockroachdb/crlfmt/internal/render:go_default_library",
        "//vendor/github.com/cockroachdb/gostdlib/go/format:go_default_library",
        "//vendor/github.com/cockroachdb/gostdlib/x/tools/imports:go_default_library",
        "//vendor/github.com/cockroachdb/ttycolor:go_default_library",
    ],
)

go_binary(
    name = "crlfmt",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
