load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "assert_api.go",
        "barriers_api.go",
        "contexttags_api.go",
        "domains_api.go",
        "errbase_api.go",
        "errutil_api.go",
        "hintdetail_api.go",
        "issuelink_api.go",
        "markers_api.go",
        "report_api.go",
        "safedetails_api.go",
        "secondary_api.go",
        "telemetrykeys_api.go",
        "withstack_api.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/errors",
    importpath = "github.com/cockroachdb/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cockroachdb/errors/assert:go_default_library",
        "//vendor/github.com/cockroachdb/errors/barriers:go_default_library",
        "//vendor/github.com/cockroachdb/errors/contexttags:go_default_library",
        "//vendor/github.com/cockroachdb/errors/domains:go_default_library",
        "//vendor/github.com/cockroachdb/errors/errbase:go_default_library",
        "//vendor/github.com/cockroachdb/errors/errutil:go_default_library",
        "//vendor/github.com/cockroachdb/errors/hintdetail:go_default_library",
        "//vendor/github.com/cockroachdb/errors/issuelink:go_default_library",
        "//vendor/github.com/cockroachdb/errors/markers:go_default_library",
        "//vendor/github.com/cockroachdb/errors/report:go_default_library",
        "//vendor/github.com/cockroachdb/errors/safedetails:go_default_library",
        "//vendor/github.com/cockroachdb/errors/secondary:go_default_library",
        "//vendor/github.com/cockroachdb/errors/telemetrykeys:go_default_library",
        "//vendor/github.com/cockroachdb/errors/withstack:go_default_library",
        "//vendor/github.com/cockroachdb/logtags:go_default_library",
        "//vendor/github.com/cockroachdb/sentry-go:go_default_library",
    ],
)
