load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "errors",
    srcs = [
        "assert_api.go",
        "barriers_api.go",
        "contexttags_api.go",
        "domains_api.go",
        "errbase_api.go",
        "errutil_api.go",
        "hintdetail_api.go",
        "issuelink_api.go",
        "markers_api.go",
        "report_api.go",
        "safedetails_api.go",
        "secondary_api.go",
        "telemetrykeys_api.go",
        "withstack_api.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/errors",
    importpath = "github.com/cockroachdb/errors",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cockroachdb/errors/assert",
        "//vendor/github.com/cockroachdb/errors/barriers",
        "//vendor/github.com/cockroachdb/errors/contexttags",
        "//vendor/github.com/cockroachdb/errors/domains",
        "//vendor/github.com/cockroachdb/errors/errbase",
        "//vendor/github.com/cockroachdb/errors/errutil",
        "//vendor/github.com/cockroachdb/errors/hintdetail",
        "//vendor/github.com/cockroachdb/errors/issuelink",
        "//vendor/github.com/cockroachdb/errors/markers",
        "//vendor/github.com/cockroachdb/errors/report",
        "//vendor/github.com/cockroachdb/errors/safedetails",
        "//vendor/github.com/cockroachdb/errors/secondary",
        "//vendor/github.com/cockroachdb/errors/telemetrykeys",
        "//vendor/github.com/cockroachdb/errors/withstack",
        "//vendor/github.com/cockroachdb/logtags",
        "//vendor/github.com/cockroachdb/redact",
        "//vendor/github.com/cockroachdb/sentry-go",
    ],
)
