load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "batch.go",
        "cache.go",
        "checkpoint.go",
        "cleaner.go",
        "commit.go",
        "compaction.go",
        "compaction_iter.go",
        "compaction_picker.go",
        "comparer.go",
        "db.go",
        "error_iter.go",
        "event.go",
        "filenames.go",
        "flush_external.go",
        "flushable.go",
        "get_iter.go",
        "ingest.go",
        "internal.go",
        "iterator.go",
        "level_checker.go",
        "level_iter.go",
        "log_recycler.go",
        "logger.go",
        "mem_table.go",
        "merger.go",
        "merging_iter.go",
        "merging_iter_heap.go",
        "metrics.go",
        "open.go",
        "options.go",
        "pacer.go",
        "read_state.go",
        "snapshot.go",
        "syncing_fs.go",
        "table_cache.go",
        "table_stats.go",
        "version_set.go",
    ],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/pebble",
    importpath = "github.com/cockroachdb/pebble",
    visibility = ["//visibility:public"],
    deps = [
        "//vendor/github.com/cockroachdb/errors:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/arenaskl:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/base:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/batchskl:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/bytealloc:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/cache:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/humanize:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/invariants:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/manifest:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/manual:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/private:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/rangedel:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/rate:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/rawalloc:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/internal/record:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/sstable:go_default_library",
        "//vendor/github.com/cockroachdb/pebble/vfs:go_default_library",
        "//vendor/github.com/cockroachdb/redact:go_default_library",
    ],
)
