load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "returncheck",
    srcs = ["returncheck.go"],
    importmap = "github.com/cockroachdb/cockroach/vendor/github.com/cockroachdb/returncheck",
    importpath = "github.com/cockroachdb/returncheck",
    visibility = ["//visibility:public"],
    deps = ["//vendor/golang.org/x/tools/go/packages"],
)
